--- a/main.css
+++ b/main.css
@@ -1,3 +1,21 @@
 table{
     border-collapse: collapse;
+    border: 1px solid black;
+}
+tr:nth-child(even){background-color:lightgray;}
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+}
+
+tr.info, td.info{
+    border: 1px solid black;
+}
+
+tr.fillout, td.fillout{
+    border-bottom: 1px dotted black;
+}
+input{
+    align-self: right;
 }
